@@ -12,12 +12,12 @@ Open bugs:
 
 Planned/requested features:
 
+- Treat connectivity of '0' as yet undetermined. 
 - Introduce a batch mode for SystreGUI.
 - Issue a warning if computed coordination number does not match given.
 - Print parametric positions for nodes and edge centers.
 - Make SystreGUI accept command line arguments.
 - Introduce keyboard shortcuts.
-- Show alternate monoclinic settings if better than default setting.
 - Link to online databases.
 - Support more output options (e.g. CrystalMaker).
 - Check for edge intersections and similar problems.
